<resources>
    <string name="app_name">Hapini - All in One</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="passcode">Passcode</string>
    <string name="user">User</string>
    <string name="admin">Admin</string>
    <string name="welcome">Welcome</string>
    <string name="master_dashboard">MASTER DASHBOARD</string>
    <string name="adduser_dashboard">Add Users</string>
    <string name="profile_dashboard">Your Profile</string>
    <string name="add_crm_user">ADD CRM USER</string>
    <string name="add_data_entry_user">ADD DATA ENTRY USER</string>
    <string name="add_video_editor_user">ADD VIDEO EDITOR USER</string>
    <string name="textviewtermsandconditon">Accept all terms and conditions</string>

    <string-array name="select_admin_type">
        <item>Select Admin Type</item>
        <item>CRM Admin</item>
        <item>Master Admin</item>
        <item>Franchise Admin</item>
    </string-array>

    <string-array name="select_user_type">
        <item>Select User Type</item>
        <item>CRM User</item>
    </string-array>

    <string-array name="india_states">
        <item>Select State </item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttrakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

    <string-array name="Customer_Feedback">
        <item>Select</item>
        <item>Wrong Number</item>
        <item>Call Not Pickup</item>
        <item>Busy</item>
        <item>Ask to Call Again</item>
        <item>Not Interested</item>
        <item>Interested But Need Sometime</item>
        <item>Interested</item>
        <item>Network Issue</item>

    </string-array>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="add_crm_admin">ADD CRM ADMIN</string>
    <string name="add_data_entry_admin">ADD DATA ENTRY ADMIN</string>
    <string name="add_video_editor_admin">ADD VIDEO EDITOR ADMIN</string>
    <string name="add_admin">ADD ADMIN</string>
    <string name="track_user">Track User</string>
    <string name="crm_user">CRM USER</string>
    <string name="video_editor_user">VIDEO EDITOR USER</string>
    <string name="data_entry_user">DATA ENTRY USER</string>
    <string name="track_admin">Track Admin</string>
    <string name="crm_admin">CRM ADMIN</string>
    <string name="data_entry_admin">DATA ENTRY ADMIN</string>
    <string name="video_editor_admin">VIDEO EDITOR ADMIN</string>
    <string name="assign_task">Assign Task</string>
    <string name="submit">submit</string>
    <string name="select_image">Select Image</string>
    <string name="coming_soon">Coming Soon !!!</string>

</resources>