<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddAdminFragment">

    <View
        android:id="@+id/viewAddAdmin"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/custom_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/llAddAdminDashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp">
        
        <ImageButton
            android:id="@+id/ivBackFromAddAdminFragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvAddAdminDashboardTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:gravity="center_horizontal"
            android:letterSpacing="0.025"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/adduser_dashboard"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_weight="3" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAddAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="2"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewAddAdmin">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddCRMAdmin"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:elevation="24dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivAddCRMAdmin"
                    android:layout_width="79dp"
                    android:layout_height="79dp"
                    android:src="@drawable/ic_add_crm"
                    app:layout_constraintBottom_toTopOf="@+id/tvAddCRMAdmin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAddCRMAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_crm_admin"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivAddCRMAdmin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddDataEntryAdmin"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:elevation="24dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivAddDataEntryAdmin"
                    android:layout_width="79dp"
                    android:layout_height="79dp"
                    android:src="@drawable/ic_add_data_entry"
                    app:layout_constraintBottom_toTopOf="@+id/tvAddDataEntryAdmin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAddDataEntryAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_data_entry_admin"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivAddDataEntryAdmin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAddVideoEditorAdmin"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_margin="8dp"
            android:layout_marginEnd="21dp"
            android:clickable="true"
            android:elevation="24dp"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardElevation="10dp"
            app:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivAddVideoEditorAdmin"
                    android:layout_width="79dp"
                    android:layout_height="79dp"
                    android:src="@drawable/ic_add_video_editor"
                    app:layout_constraintBottom_toTopOf="@+id/tvAddVideoEditorAdmin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAddVideoEditorAdmin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/add_video_editor_admin"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ivAddVideoEditorAdmin" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
    
</androidx.constraintlayout.widget.ConstraintLayout>